Fixed space between recipe info times, on mobile view

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -31,6 +31,10 @@ h3 {
     margin-bottom: 30px;
 }
 
+h6 {
+    font-weight: 500;
+}
+
 .hp-card-content {
     background-color: #fafafa;
 }
@@ -138,6 +142,14 @@ h3 {
     #cook-time {
         padding-left: 5px;
         padding-right: 5px;
+    }
+
+    #prep-time {
+        padding-right: 5px;
+    }
+
+    #serves {
+        padding-left: 5px;
     }
 
     .view-recipe-instruction h2,
